SalesOrder and SalesOrderRow scaffold added.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,4 @@
 <h1>Welcome to Warehouse Management System</h1>
 <%= link_to 'Products', products_path %>
+<br/>
+<%= link_to 'Sales Orders', sales_orders_path %>
