--- a/app/views/sales_order_rows/_sales_order_row.html.erb
+++ b/app/views/sales_order_rows/_sales_order_row.html.erb
@@ -1,5 +1,7 @@
 <div class="sales_order_row">
-  <%= sales_order_row.name %>
+	<!--<%=text_field_tag 'name', '', :autocomplete => sales_order_autocomplete_product_name_path %>-->
+  <!--<%= sales_order_row.name %> -->
+  <%= autocomplete_field_tag 'name', '',sales_order_autocomplete_product_name_path %>
   <%= sales_order_row.order_quantity %>
   <%= sales_order_row.unit_price %>
   <%= sales_order_row.discount_amount%>
