--- a/app/views/sales_orders/_sales_order_row_fields.html.erb
+++ b/app/views/sales_orders/_sales_order_row_fields.html.erb
@@ -1,5 +1,5 @@
 <div class="sales_order_row">
-  <%= f.text_field :name%>
+  <%= f.autocomplete_field :name, autocomplete_product_name_sales_orders_path %>
   <%= f.text_field :order_quantity%>
   <%= f.text_field :unit_price%>
   <%= f.text_field :discount_percent%>
