Warehouse core functionality.
Added warehouse, warehouse spot and warehouse entry spot scaffolds.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,6 +3,10 @@
 <br/>
 <%= link_to 'Sales Orders', sales_orders_path %>
 <br/>
+<%= link_to('Warehouses', warehouses_path) %>
+<br/>
+<%= link_to('Warehouse Spots', warehouse_spots_path)%>
+<br/>
 <br/>
 <%= link_to("English", "#{'http://localhost.com:3000'}") %>
 <br/>
