--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,6 +3,8 @@
 <br/>
 <%= link_to 'Sales Orders', sales_orders_path %>
 <br/>
+<%= link_to('Purchase Orders', purchase_orders_path)%>
+<br/>
 <%= link_to('Warehouses', warehouses_path) %>
 <br/>
 <%= link_to('Warehouse Spots', warehouse_spots_path)%>
