--- a/app/views/supplies/_form.html.erb
+++ b/app/views/supplies/_form.html.erb
@@ -28,6 +28,8 @@
       <br/>
       <br/>
     </div>
+    <div id="purchase_order_rows_wrapper">
+    </div>
     <div class="actions">
       <%= f.submit %>
     </div>
