--- a/app/views/purchase_orders/_receive_form.html.erb
+++ b/app/views/purchase_orders/_receive_form.html.erb
@@ -1,4 +1,4 @@
-<%= nested_form_for(@supply) do |f| %>
+<%= nested_form_for(@supply, :url => {:controller => 'supplies', :action => 'receive'}) do |f| %>
     <% if @supply.errors.any? %>
         <div id="error_explanation">
           <h2><%= pluralize(@supply.errors.count, "error") %> prohibited this supply from being
@@ -19,28 +19,39 @@
 
     <p>
       <b>Warehouse:</b>
-      <%= collection_select(:warehouse, :id, Warehouse.all, :id, :name, {:prompt => 'Select a warehouse'}) %>
+      <%= collection_select(:warehouse, :warehouse_id, Warehouse.all, :id, :name, {:prompt => 'Select a warehouse'}) %>
     </p>
+
+    <%= hidden_field :purchase_order, :id, { :value => @purchase_order.id } %>
 
     <div class="supply_rows">
       <table>
         <thead>
         <tr>
+          <th></th>
           <th>Name</th>
           <th>Order quantity</th>
+          <th>Supplied quantity</th>
+          <th>Warehouse spot</th>
         </tr>
         </thead>
         <tbody>
-        <% @purchase_order.purchase_order_rows.each do |purchase_order_row| %>
+        <%= f.fields_for :supply_rows do |supply_row_form| %>
             <tr>
-              <%= f.fields_for :supply_rows do |supply_row_form| %>
-                  <%= supply_row_form.hidden_field %>
-                  <td align="center"><%= purchase_order_row.name %></td>
-                  <td align="center"><%= purchase_order_row.order_quantity%></td>
-              <% end %>
+              <td>
+                <%= supply_row_form.hidden_field :purchase_order_row_id %>
+                <%= supply_row_form.hidden_field :name %>
+                <%= supply_row_form.hidden_field :unit_cost %>
+              </td>
+              <td align="center"><%= supply_row_form.text_field :name, {:disabled => 'disabled'} %></td>
+              <td align="center"><%= supply_row_form.text_field :supplied_quantity, {:disabled => 'disabled'} %></td>
+              <td align="center"><%= supply_row_form.text_field :supplied_quantity, {:class => 'supplied_quantity'} %></td>
+              <td align="center"><select class='warehouse_spot'><option>Select a warehouse</option></select></td>
             </tr>
         <% end %>
+
         </tbody>
       </table>
     </div>
+    <%= f.submit %>
 <% end %>
