--- a/app/views/purchase_orders/index.html.erb
+++ b/app/views/purchase_orders/index.html.erb
@@ -18,7 +18,7 @@
     <td><%= link_to 'Show', purchase_order %></td>
     <td><%= link_to 'Edit', edit_purchase_order_path(purchase_order) %></td>
     <td><%= link_to 'Destroy', purchase_order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-    <td><%= link_to 'Receive',  :controller => "purchase_orders", :action => "receive", :id => purchase_order %></td>
+    <td><%= link_to 'Receive',  :controller => "purchase_orders", :action => "show_receive", :id => purchase_order %></td>
   </tr>
 <% end %>
 </table>
