--- a/app/views/supplies/index.html.erb
+++ b/app/views/supplies/index.html.erb
@@ -10,7 +10,7 @@
 
 <% @supplies.each do |supply| %>
   <tr>
-    <td><%= supply.name %></td>
+    <td><%= supply.id %></td>
     <td><%= link_to 'Show', supply %></td>
     <td><%= link_to 'Edit', edit_supply_path(supply) %></td>
     <td><%= link_to 'Destroy', supply, method: :delete, data: { confirm: 'Are you sure?' } %></td>
