--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,6 +5,10 @@
 <br/>
 <%= link_to('Purchase Orders', purchase_orders_path)%>
 <br/>
+<%= link_to('Shipments', shipments_path)%>
+<br/>
+<%= link_to('Supplies', supplies_path)%>
+<br/>
 <%= link_to('Warehouses', warehouses_path) %>
 <br/>
 <%= link_to('Warehouse Spots', warehouse_spots_path)%>
