--- a/app/views/sales_orders/index.html.erb
+++ b/app/views/sales_orders/index.html.erb
@@ -18,6 +18,7 @@
     <td><%= link_to 'Show', sales_order %></td>
     <td><%= link_to 'Edit', edit_sales_order_path(sales_order) %></td>
     <td><%= link_to 'Destroy', sales_order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to 'Deliver',  :controller => "sales_orders", :action => "show_delivery", :id => sales_order %></td>
   </tr>
 <% end %>
 </table>
