--- a/app/views/purchase_orders/_form.html.erb
+++ b/app/views/purchase_orders/_form.html.erb
@@ -1,3 +1,5 @@
+<%= javascript 'purchase_orders' %>
+
 <%= form_for(@purchase_order) do |f| %>
     <% if @purchase_order.errors.any? %>
         <div id="error_explanation">
