--- a/app/views/sales_order_rows/_sales_order_row.html.erb
+++ b/app/views/sales_order_rows/_sales_order_row.html.erb
@@ -2,7 +2,7 @@
   <%= sales_order_row.name %>
   <%= sales_order_row.order_quantity %>
   <%= sales_order_row.unit_price %>
-  <%= sales_order_row.discount_amount %>
+  <%= sales_order_row.unit_price %>
   <br/>
   <br/>
 </div>
