--- a/app/views/sales_orders/_form.html.erb
+++ b/app/views/sales_orders/_form.html.erb
@@ -1,3 +1,5 @@
+<%= javascript 'sales_orders' %>
+
 <%= form_for(@sales_order) do |f| %>
     <% if @sales_order.errors.any? %>
         <div id="error_explanation">
