--- a/app/views/purchase_orders/_receive_form.html.erb
+++ b/app/views/purchase_orders/_receive_form.html.erb
@@ -24,7 +24,7 @@
       <%= collection_select(:warehouse, :warehouse_id, Warehouse.all, :id, :name, {:prompt => 'Select a warehouse'}) %>
     </p>
 
-    <%= hidden_field :purchase_order, :id, { :value => @purchase_order.id } %>
+    <%= hidden_field :purchase_order, :purchase_order_id, { :value => @purchase_order.id } %>
 
     <div class="supply_rows">
       <table>
