--- a/app/views/sales_orders/_sales_order_row_fields.html.erb
+++ b/app/views/sales_orders/_sales_order_row_fields.html.erb
@@ -1,6 +1,6 @@
 <tr class="sales_order_row">
-  <td><%= f.hidden_field :product_id, :id => 'real_product_id' %></td>
-  <td><%= f.autocomplete_field :name, autocomplete_product_name_sales_orders_path, :id_element => '#real_product_id' %></td>
+  <td><%= f.hidden_field :product_id, :class => 'real_product_id' %></td>
+  <td><%= f.autocomplete_field :name, autocomplete_product_name_sales_orders_path, :class => 'product_autocomplete' %></td>
   <td><%= f.text_field :order_quantity %></td>
   <td><%= f.text_field :unit_price %></td>
   <td><%= f.text_field :discount_percent %></td>
