--- a/app/views/shipments/show.html.erb
+++ b/app/views/shipments/show.html.erb
@@ -2,14 +2,16 @@
 
 <p>
   <b>Sales order:</b>
-  <%= @shipment.sales_order %>
+  <%= @shipment.sales_order.id %>
 </p>
 
 <p>
   <b>Warehouse:</b>
-  <%= @shipment.warehouse %>
+  <%= @shipment.warehouse.name %>
 </p>
 
+
+<%= render 'shipment_rows/shipment_rows' %>
 
 <%= link_to 'Edit', edit_shipment_path(@shipment) %> |
 <%= link_to 'Back', shipments_path %>
