--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,6 +13,8 @@
 <br/>
 <%= link_to('Warehouse Spots', warehouse_spots_path)%>
 <br/>
+<%= link_to('Warehouse Inventories', warehouse_inventories_path)%>
+<br/>
 <br/>
 <%= link_to("English", "#{'http://localhost.com:3000'}") %>
 <br/>
