--- a/app/views/supply_rows/_supply_rows.html.erb
+++ b/app/views/supply_rows/_supply_rows.html.erb
@@ -7,7 +7,7 @@
   </tr>
   </thead>
   <tbody>
-  <%= @supply.supply_rows.each do |supply_row| %>
+  <% @supply.supply_rows.each do |supply_row| %>
       <tr>
         <td align='center'><%= supply_row.name %></td>
         <td align='center'><%= supply_row.supplied_quantity %></td>
@@ -17,6 +17,6 @@
           <% end %>
         </td>
       </tr>
-  <%= end %>
+  <% end %>
   </tbody>
 </table>
