--- a/app/views/warehouse_inventory_rows/_warehouse_inventory_rows_table.erb
+++ b/app/views/warehouse_inventory_rows/_warehouse_inventory_rows_table.erb
@@ -1,12 +1,24 @@
-<div class="warehouse_inventory_row">
-  <%= f.hidden_field :product_id, :class => 'real_product_id' %>
+<div class="warehouse_inventory_wrapper">
   <span>
-    <%= f.autocomplete_field :name, autocomplete_product_name_sales_orders_path, :class => 'product_autocomplete' %>
+    <select class='warehouse_spot'>
+      <option>Select a warehouse</option>
+    </select>
   </span>
-  <span>
-    <%= f.text_field :quantity, :disabled => 'disabled', :class => 'database_quantity' %>
-  </span>
-  <span>
-    <%= f.text_field :counted_quantity %>
-  </span>
+  <br/>
+
+  <div class="warehouse_inventory_row">
+    <%= warehouse_inventory_row_form.hidden_field :product, :class => 'real_product_id' %>
+    <div class='child_index' style="display:none;">
+      <%= warehouse_inventory_row_form.nested_child_index_public('warehouse_inventories') %>
+    </div>
+      <span>
+        <%= autocomplete_field_tag 'product[name]', '', autocomplete_product_name_warehouse_inventories_path, :class => 'product_autocomplete' %>
+      </span>
+      <span>
+        <%= text_field_tag :quantity, '', :disabled => 'disabled', :class => 'database_quantity' %>
+      </span>
+      <span>
+        <%= warehouse_inventory_row_form.text_field :counted_quantity %>
+      </span>
+  </div>
 </div>
