--- a/app/views/warehouse_inventories/index.html.erb
+++ b/app/views/warehouse_inventories/index.html.erb
@@ -20,4 +20,5 @@
 
 <br />
 
+<%= link_to 'New Warehouse inventory by spot', 'warehouse_inventories/warehouse_select' %>
 <%= link_to 'New Warehouse inventory', new_warehouse_inventory_path %>
